--- a/vistas/contacto.html
+++ b/vistas/contacto.html
@@ -23,24 +23,24 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                <ul class="navbar-nav align-items-center ">
-                  <li class="nav-item">
+                <ul class="navbar-nav align-items-center navbar1">
+                  <li class="nav-item navbar1__item">
                     <a class="nav-link" href="productos.html">Productos</a>
                   </li>
-                  <li class="nav-item dropdown">
+                  <li class="nav-item navbar1__item dropdown">
                     <a class="nav-link dropdown-tooggle" aria-current="page" href="soluciones.html" id="dropdownSoluciones" role="button"
                     aria-haspopup="true" aria-expanded="false" style="text-align: center;">Soluciones</a>
-                    <ul class="dropdown-menu bg-secondary" aria-labelledby="dropdownSoluciones">
+                    <ul class="dropdown-menu navbar2" aria-labelledby="dropdownSoluciones">
                         <li><a class="dropdown-item" href="soluciones.html#agricultura">Agricultura</a></li>
                         <li><a class="dropdown-item" href="soluciones.html#infraestructuras">Infraestructuras</a></li>
                         <li><a class="dropdown-item" href="soluciones.html#emergencias">Emergencias</a></li>
-			            <li><a class="dropdown-item" href="soluciones.html#vigilancia">Vigilancia</a></li>
+			                  <li><a class="dropdown-item" href="soluciones.html#vigilancia">Vigilancia</a></li>
                     </ul>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item navbar1__item">
                     <a class="nav-link"  href="clientes.html">Clientes</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item navbar1__item">
                     <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
                   </li>
                 </ul>
