--- a/vistas/productos.html
+++ b/vistas/productos.html
@@ -23,24 +23,24 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                <ul class="navbar-nav align-items-center">
-                  <li class="nav-item">
+                <ul class="navbar-nav navbar1 align-items-center">
+                  <li class="nav-item navbar1__item ">
                     <a class="nav-link active"  aria-current="page" href="productos.html">Productos</a>
                   </li>
-                  <li class="nav-item dropdown">
+                  <li class="nav-item navbar1__item dropdown">
                     <a class="nav-link dropdown-tooggle" aria-current="page" href="soluciones.html" id="dropdownSoluciones" role="button"
                     aria-haspopup="true" aria-expanded="false" style="text-align: center;">Soluciones</a>
-                    <ul class="dropdown-menu bg-secondary" aria-labelledby="dropdownSoluciones">
+                    <ul class="dropdown-menu text-center navbar2" aria-labelledby="dropdownSoluciones">
                         <li><a class="dropdown-item" href="soluciones.html#agricultura">Agricultura</a></li>
                         <li><a class="dropdown-item" href="soluciones.html#infraestructuras">Infraestructuras</a></li>
                         <li><a class="dropdown-item" href="soluciones.html#emergencias">Emergencias</a></li>
 			                  <li><a class="dropdown-item" href="soluciones.html#vigilancia">Vigilancia</a></li>
                     </ul>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item navbar1__item">
                     <a class="nav-link" href="clientes.html">Clientes</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item navbar1__item">
                     <a class="nav-link" href="contacto.html">Contacto</a>
                   </li>
                 </ul>
@@ -57,9 +57,9 @@
         <!--LISTA CARACTERISTICAS DE AMBOS PRODUCTOS-->
         <div class="listaCaracteristicas">
           <div class="container">
-          <div class="">
-          <ul class="list-group badge fs-8 text-wrap" style="opacity: .8;">
-            <li class="list-group-item fs-2 bg-primary ">Caracteristicas de nuestros UAV ALBATROS y BAT</li>
+          <div class="row">
+          <ul class="list-group badge fs-10 text-wrap" style="opacity: .8; padding: 2px;">
+            <li class="list-group-item fs-8 bg-primary ">Caracteristicas de nuestros UAV ALBATROS y BAT</li>
             <li class="list-group-item">Misiones totalmente autonomas, incluso mas alla del rango de comunicacion</li>
             <li class="list-group-item">Comunicacion por radio hasta 50 km. Si esta disponible una red 4G/LTE puede permitir un alcance ilimitado.</li>
             <li class="list-group-item">Rango de video HD de 50 KM (o ilimitado a traves de LTE/4G)</li>
