--- a/vistas/soluciones.html
+++ b/vistas/soluciones.html
@@ -24,25 +24,25 @@
               </button>
 
               <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                <ul class="navbar-nav align-items-center">
+                <ul class="navbar-nav navbar1 align-items-center">
 
-                  <li class="nav-item">
+                  <li class="nav-item navbar1__item">
                     <a class="nav-link" href="productos.html">Productos</a>
                   </li>
-                  <li class="nav-item dropdown active">
+                  <li class="nav-item navbar1__item dropdown active">
                     <a class="nav-link dropdown-tooggle active" aria-current="page" href="soluciones.html" id="dropdownSoluciones" role="button"
                     aria-haspopup="true" aria-expanded="false" style="text-align: center;">Soluciones</a>
-                    <ul class="dropdown-menu bg-secondary" aria-labelledby="dropdownSoluciones">
+                    <ul class="dropdown-menu navbar2" aria-labelledby="dropdownSoluciones">
                         <li><a class="dropdown-item" href="#agricultura">Agricultura</a></li>
                         <li><a class="dropdown-item" href="#infraestructuras">Infraestructuras</a></li>
                         <li><a class="dropdown-item" href="#emergencias">Emergencias</a></li>
 			            <li><a class="dropdown-item" href="#vigilancia">Vigilancia</a></li>
                     </ul>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item navbar1__item">
                     <a class="nav-link" href="clientes.html">Clientes</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item navbar1__item">
                     <a class="nav-link" href="contacto.html">Contacto</a>
                   </li>
                 </ul>
@@ -75,7 +75,7 @@
                 <!--TEXTO LATERAL-->
                 <div class="col-md-6">
                     <p class="textodescriptivo text-wrap fw-lighter fs-4">
-                        Nuestros UAV son un gran activo para los agricultores porque les permite comprender mejor la salud y la vitalidad de sus cultivos. Al usar nuestra plataforma junto con una cámara multiespectral o térmica, hemos sido testigos de como nuestros clientes experimentan rendimientos mejorados y costos operativos reducidos.
+                        Nuestros UAV son un gran activo para los agricultores porque les permite comprender mejor la salud y la vitalidad de sus cultivos. Al usar nuestra plataforma junto con una cámara multiespectral o térmica, hemos sido testigos de como nuestros clientes experimentan rendimientos mejorados y costos operativos reducidos, al usar nuestros equipos para:
                     </p>                               
                 </div>
 
