--- a/vistas/contacto.html
+++ b/vistas/contacto.html
@@ -30,7 +30,7 @@
                   <li class="nav-item navbar1__item dropdown">
                     <a class="nav-link dropdown-tooggle" aria-current="page" href="soluciones.html" id="dropdownSoluciones" role="button"
                     aria-haspopup="true" aria-expanded="false" style="text-align: center;">Soluciones</a>
-                    <ul class="dropdown-menu navbar2" aria-labelledby="dropdownSoluciones">
+                    <ul class="dropdown-menu text-center navbar2" aria-labelledby="dropdownSoluciones">
                         <li><a class="dropdown-item" href="soluciones.html#agricultura">Agricultura</a></li>
                         <li><a class="dropdown-item" href="soluciones.html#infraestructuras">Infraestructuras</a></li>
                         <li><a class="dropdown-item" href="soluciones.html#emergencias">Emergencias</a></li>
