--- a/vistas/soluciones.html
+++ b/vistas/soluciones.html
@@ -32,7 +32,7 @@
                   <li class="nav-item navbar1__item dropdown active">
                     <a class="nav-link dropdown-tooggle active" aria-current="page" href="soluciones.html" id="dropdownSoluciones" role="button"
                     aria-haspopup="true" aria-expanded="false" style="text-align: center;">Soluciones</a>
-                    <ul class="dropdown-menu navbar2" aria-labelledby="dropdownSoluciones">
+                    <ul class="dropdown-menu text-center navbar2" aria-labelledby="dropdownSoluciones">
                         <li><a class="dropdown-item" href="#agricultura">Agricultura</a></li>
                         <li><a class="dropdown-item" href="#infraestructuras">Infraestructuras</a></li>
                         <li><a class="dropdown-item" href="#emergencias">Emergencias</a></li>
